<resources>
    <string name="facebook_app_id">com.codart.building_calculator</string>
    <string name="fb_login_protocol_scheme">fbcom.codart.building_calculator</string>
    <string name="app_name">Строительный калькулятор:</string>
    <string name="title_activity_main">Строительный калькулятор:</string>
    <string name="triangle">Введите 2 стороны и угол или 2 угла и сторону</string>
    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>
    <string name="title_notebook">Notebook</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title">Строительный калькулятор</string>
    <string name="company">Stroy_pro</string>
    <string name="calculator">Калькулято:</string>
    <string name="line">Линейка</string>
    <string name="settings">Настройки</string>
    <string name="about">Оценить приложение</string>
    <string name="main">Основное</string>
    <string name="metal">Метал</string>
    <string name="squares">Площади</string>
    <string name="converters">Конверторы</string>
    <string name="usefulToKnow">Полезно знать:</string>
    <string name="notes">Сохранения:</string>
    <string name="notebook">Блокнот:</string>
    <string name="parametres">Параметры:</string>
    <string name="results">Результаты:</string>
    <string name="subscribe">Подписка</string>
    <string name="main_page">Главное</string>
    <string name="noads">Подписка на отключение рекламы</string>
    <string name="month1">1 месяц - без рекламы</string>
    <string name="month3">3 месяц - без рекламы</string>
    <string name="month6">6 месяц - без рекламы</string>
    <string name="year1">1 год - без рекламы</string>
    <string name="price_month1">1.99$</string>
    <string name="price_month3">2.99$</string>
    <string name="price_month6">3.99$</string>
    <string name="price_year1">6.99$</string>
    <string name="sizeA">Размер [A]:</string>
    <string name="sizeB">Размер [B]:</string>
    <string name="sizeC">Размер [C]:</string>
    <string name="sizeD">Размер [D]:</string>
    <string name="sizeE">Размер [E]:</string>
    <string name="sort_of_calculation">Вид расчета:</string>
    <string name="from_list">Из списка:</string>
    <string name="your_size">Свои розмеры:</string>
    <string name="add_space">Добавить проёмы
    (Окна, Двери)</string>
    <string name="add_space2">Добавить проём</string>
    <string name="priceBeton">Стоимость бетона за м3:</string>
    <string name="calculation1_result1">Площадь основания плиты:</string>
    <string name="calculation1_result2">Объём бетона:</string>
    <string name="calculation1_result3">Периметр плиты:</string>
    <string name="calculation1_result4">Площадь боковой поверхности:</string>
    <string name="calculation1_result5">Вес бетона:</string>
    <string name="calculation1_result6">Нагрузка на почву:</string>
    <string name="calculation1_result7">Стоимость бетона:</string>
    <string name="calculation2_result1">Площадь основания фундамента:</string>
    <string name="calculation2_result3">Внешний периметр:</string>
    <string name="calculation2_result4">Площадь внешней боковой поверхности:</string>
    <string name="calculation6_text1">Стоимость бетона:</string>
    <string name="calculation6_text2">Стоимость бетона:</string>
    <string name="calculation6_text3">Стоимость бетона:</string>
    <string name="calculation6_text4">Стоимость бетона:</string>
    <string name="calculation6_text5">Стоимость бетона:</string>
    <string name="calculation6_text6">Стоимость бетона:</string>
    <string name="calculation6_text7">Стоимость бетона:</string>
    <string name="calculation6_text8">Стоимость бетона:</string>
    <string name="calculation7_text1">Диаметр [D]:</string>
    <string name="calculation7_text2">Высота [H]:</string>
    <string name="calculation7_text3">Толщина [T]:</string>
    <string name="calculation7_text4">Объем бетона:</string>
    <string name="calculation7_text5">Внутрений диаметр:</string>
    <string name="calculation7_text6">Внутрений объем:</string>
    <string name="calculation7_text7">Высота арматурной сетки:</string>
    <string name="calculation7_text8">Ширина арматурной сетки:</string>
    <string name="calculation7_text9">Площадь арматурной сетки:</string>
    <string name="calculation7_text10">Приблизительный вес:</string>
    <string name="cement">Цемент:</string>
    <string name="sand">Песок:</string>
    <string name="crushed_stone">Щебень:</string>
    <string name="water">Вода:</string>
    <string name="add_text1">Название:</string>
    <string name="add_text2">Длина:</string>
    <string name="add_text3">Высота:</string>
    <string name="add_text4">Количество:</string>
    <string name="add_text5">Добавить в список</string>
    <string name="add_text6">Отмена</string>
    <string name="calculation8_text1">Вид кирпича:</string>
    <string name="calculation8_text2">Длина стен:</string>
    <string name="calculation8_text3">Высота стен:</string>
    <string name="calculation8_text4">Толщина стен:</string>
    <string name="calculation8_text5">Толщина раствора в кладке:</string>
    <string name="calculation8_text6">Вес 1 кирпича:</string>
    <string name="calculation8_text7">Стоимость одного кирпича:</string>
    <string name="calculation8_text8">Площадь проёмов:</string>
    <string name="calculation8_text9">Общая площадь кладки:</string>
    <string name="calculation8_text10">Толщина стены:</string>
    <string name="calculation8_text11">Количество кирпича:</string>
    <string name="calculation8_text12">Объем всего кирпича:</string>
    <string name="calculation8_text13">Количество кирпича в кубе:</string>
    <string name="calculation8_text14">Количество полных рядов кирпича в высоту:</string>
    <string name="calculation8_text15">Вес 1 кирпича:</string>
    <string name="calculation8_text16">Вес всего кирпича:</string>
    <string name="calculation8_text17">Нагрузка  на фундамент от кирпича:</string>
    <string name="calculation8_text18">Стоимость:</string>
    <string name="calculation9_text1">Размеры блока:</string>
    <string name="calculation9_text2">Стоимость блока:</string>
    <string name="calculation9_text3">Вес 1 блока:</string>
    <string name="calculation9_text4">Длина стен:</string>
    <string name="calculation9_text5">Высота стен:</string>
    <string name="calculation9_text6">Толщина стен:</string>
    <string name="calculation9_text7">Толщина раствора:</string>
    <string name="calculation9_text8">Площадь проёмов:</string>
    <string name="calculation9_text9">Общая площадь кладки:</string>
    <string name="calculation9_text10">Толщина стены:</string>
    <string name="calculation9_text11">Количество блоков:</string>
    <string name="calculation9_text12">Объем всех блоков:</string>
    <string name="calculation9_text13">Количество блоков в кубе:</string>
    <string name="calculation9_text14">Объем раствора:</string>
    <string name="calculation9_text15">Вес всех блоков:</string>
    <string name="calculation9_text16">Вес всего кирпича:</string>
    <string name="calculation9_text17">Нагрузка  на фундамент:</string>
    <string name="calculation9_text18">Стоимость:</string>
    <string name="calculation10_text1">Размер A:</string>
    <string name="calculation10_text2">Размер B:</string>
    <string name="calculation10_text3">Размер C:</string>
    <string name="calculation10_text4">Длина стен:</string>
    <string name="calculation10_text5">Высота стен:</string>
    <string name="calculation10_text6">Вес 1 блока:</string>
    <string name="calculation10_text7">Толщина стен:</string>
    <string name="calculation10_text8">Толщина раствора:</string>
    <string name="calculation10_text9">Стоимость блока:</string>
    <string name="calculation10_text10">Общая площадь кладки:</string>
    <string name="calculation10_text11">Толщина стены:</string>
    <string name="calculation10_text12">Количество блоков:</string>
    <string name="calculation10_text13">Объем всех блоков:</string>
    <string name="calculation10_text14">Количество блоков в кубе:</string>
    <string name="calculation10_text15">Объем раствора:</string>
    <string name="calculation10_text16">Вес всех блоков:</string>
    <string name="calculation10_text17">Нагрузка  на фундамент:</string>
    <string name="calculation10_text18">Стоимость:</string>
    <string name="calculation11_text1">Размер блока/кирпича:</string>
    <string name="calculation11_text2">Длина :</string>
    <string name="calculation11_text3">Ширина:</string>
    <string name="calculation11_text4">Высота:</string>
    <string name="calculation11_text5">Количество в 1м3:</string>
    <string name="calculation12_text1">Размер блока/кирпича:</string>
    <string name="calculation12_text2">Длина :</string>
    <string name="calculation12_text3">Ширина:</string>
    <string name="calculation12_text4">Высота:</string>
    <string name="calculation12_text5">Количество в 1 ярде3:</string>
    <string name="calculation13_text1">Вид блока:</string>
    <string name="calculation13_text2">Прочность:</string>
    <string name="calculation13_text3">Плотность:</string>
    <string name="calculation13_text4">Теплопроводность:</string>
    <string name="calculation13_text5">Морозостойкость:</string>
    <string name="calculation13_text6">Усадка:</string>
    <string name="calculation13_text7">Водопоглощение:</string>
    <string name="calculation13_text8">Характеризует нагрузку на сжатие которую может выдержать блок.</string>
    <string name="calculation13_text9">Вес 1 кубометра материала</string>
    <string name="calculation13_text10">Показывает потерю тепла через стену из блоков площадью в 1м2 при перепаде температур в 1 градус.</string>
    <string name="calculation13_text11">Количество циклов замораживания/размораживания которые способен выдержать материал без значительного понижения прочности.</string>
    <string name="calculation13_text12">Величина, на которую уменьшается размер блока после выдержки его под давлением стен в течении времени.</string>
    <string name="calculation13_text13">Процентное соотношение, показывающее сколько влаги способен поглотить материал</string>
    <string name="calculation14_text1">Длина листа:</string>
    <string name="calculation14_text2">Ширина листа:</string>
    <string name="calculation14_text3">Толщина листа:</string>
    <string name="calculation14_text4">Длина:</string>
    <string name="calculation14_text5">Ширина:</string>
    <string name="calculation14_text6">Количество слоев утеплителя:</string>
    <string name="calculation14_text7">Стоимость листа:</string>
    <string name="calculation14_text8">Плотность:</string>
    <string name="calculation14_text9">Площадь одного листа:</string>
    <string name="calculation14_text10">Объем одного листа:</string>
    <string name="calculation14_text11">Листов 1 м3:</string>
    <string name="calculation14_text12">Площадь поверхности:</string>
    <string name="calculation14_text13">Толщина утеплителя:</string>
    <string name="calculation14_text14">Объем утеплителя:</string>
    <string name="calculation14_text15">Количество листов:</string>
    <string name="calculation14_text16">Полная стоимость:</string>
    <string name="calculation14_text17">Суммарный вес:</string>
    <string name="calculation15_text1">Сторона [A]:</string>
    <string name="calculation15_text2">Сторона [B]:</string>
    <string name="calculation15_text3">Доски вдоль стороны:</string>
    <string name="calculation15_text4">Длина:</string>
    <string name="calculation15_text5">Ширина:</string>
    <string name="calculation15_text6">Толщина:</string>
    <string name="calculation15_text7">Размер [C]:</string>
    <string name="calculation15_text8">Стоимость:</string>
    <string name="calculation15_text9">Площадь настила:</string>
    <string name="calculation15_text10">Количество досок настила:</string>
    <string name="calculation15_text11">Объем досок настила:</string>
</resources>