<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@color/black_fill"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="@dimen/margin_left">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_main_page" />

        <TextView
            android:id="@+id/txtCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/imageView"
            android:paddingLeft="15dp"
            android:text="@string/main_page"
            android:textColor="@color/black_fill"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="@dimen/margin_left">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/no_ads" />

        <TextView
            android:id="@+id/txtLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/imageView2"
            android:paddingLeft="15dp"
            android:text="@string/subscribe"
            android:textColor="@color/black_fill"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="@dimen/margin_left">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:id="@+id/txtSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/imageView3"
            android:paddingLeft="15dp"
            android:text="@string/settings"
            android:textColor="@color/black_fill"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="@dimen/margin_left">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_about" />

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/imageView4"
            android:paddingLeft="15dp"
            android:text="@string/about"
            android:textColor="@color/black_fill"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>